--- a/resources/views/index/product-list-category.twig
+++ b/resources/views/index/product-list-category.twig
@@ -314,6 +314,7 @@
 
             $("#quick-view-modal-container").modal("show");
         });
+        return false;
     });
 
     $(".modal .add-to-cart-btn").on("click", function()
