--- a/resources/views/index/index.twig
+++ b/resources/views/index/index.twig
@@ -102,50 +102,46 @@
 		<div class="row">
 			<div class="col-lg-6 col-md-6 mb-sm-30">
 				<div class="banner">
-					<a href="shop-left-sidebar.html">
-						<img src="{{plugin_path("Plentymarket")}}/images/category-banner/home1-banner1.jpg"
-						     class="img-fluid" alt="">
+					<a href="/index/product_list_category/{{categoryList.home_category_1.id}}">
+						<img src="{{categoryList.home_category_1.details.0.imagePath}}" class="img-fluid" alt="">
 					</a>
 					<span class="banner-category-title">
-							<a href="shop-left-sidebar.html">furniture</a>
-						</span>
+						<a href="/index/product_list_category/{{categoryList.home_category_1.id}}">{{categoryList.home_category_1.details.0.name}}</a>
+					</span>
 				</div>
 			</div>
 			<div class="col-lg-6 col-md-6">
 				<div class="row">
 					<div class="col-lg-12 col-md-12 mb-30">
 						<div class="banner">
-							<a href="shop-left-sidebar.html">
-								<img src="{{plugin_path("Plentymarket")}}/images/category-banner/home1-banner2.jpg"
-								     class="img-fluid" alt="">
+							<a href="/index/product_list_category/{{categoryList.home_category_2.id}}">
+								<img src="{{categoryList.home_category_2.details.0.imagePath}}" class="img-fluid" alt="">
 							</a>
 							<span class="banner-category-title">
-									<a href="shop-left-sidebar.html">rooms</a>
-								</span>
+								<a href="/index/product_list_category/{{categoryList.home_category_2.id}}">{{categoryList.home_category_2.details.0.name}}</a>
+							</span>
 						</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-lg-6 col-md-6 col-sm-6 col-6">
 						<div class="banner">
-							<a href="shop-left-sidebar.html">
-								<img src="{{plugin_path("Plentymarket")}}/images/category-banner/home1-banner3.jpg"
-								     class="img-fluid" alt="">
+							<a href="/index/product_list_category/{{categoryList.home_category_3.id}}">
+								<img src="{{categoryList.home_category_3.details.0.imagePath}}" class="img-fluid" alt="">
 							</a>
 							<span class="banner-category-title">
-									<a href="shop-left-sidebar.html">lighting</a>
-								</span>
+								<a href="/index/product_list_category/{{categoryList.home_category_3.id}}">{{categoryList.home_category_3.details.0.name}}</a>
+							</span>
 						</div>
 					</div>
 					<div class="col-lg-6 col-md-6 col-sm-6 col-6">
 						<div class="banner">
-							<a href="shop-left-sidebar.html">
-								<img src="{{plugin_path("Plentymarket")}}/images/category-banner/home1-banner4.jpg"
-								     class="img-fluid" alt="">
+							<a href="/index/product_list_category/{{categoryList.home_category_4.id}}">
+								<img src="{{categoryList.home_category_4.details.0.imagePath}}" class="img-fluid" alt="">
 							</a>
 							<span class="banner-category-title">
-									<a href="shop-left-sidebar.html">decor</a>
-								</span>
+								<a href="/index/product_list_category/{{categoryList.home_category_4.id}}">{{categoryList.home_category_4.details.0.name}}</a>
+							</span>
 						</div>
 					</div>
 				</div>
