--- a/resources/views/index/product-list-category.twig
+++ b/resources/views/index/product-list-category.twig
@@ -193,7 +193,9 @@
                                     <input type="text" value="1">
                                 </div>
                                 <div class="add-to-cart-btn">
-                                    <a href="" class="pataku-btn"><i class="fa fa-shopping-cart"></i>{{trans('Plentymarket::WebIndexProductListCategory.add_to_cart')}}
+                                    <a href="" class="pataku-btn">
+                                        <i class="fa fa-shopping-cart"></i>
+                                        {{trans('Plentymarket::WebIndexProductListCategory.add_to_cart')}}
                                     </a>
                                 </div>
                             </div>
