--- a/resources/views/index/index.twig
+++ b/resources/views/index/index.twig
@@ -395,7 +395,7 @@
 							<div class="ptk-product">
 								<div class="image">
 									<a href="/index/product/{{item.id}}">
-										<img src="{{item.images.0}}" class="img-fluid" alt="">
+										<img src="{{item.images.0}}" class="img-fluid" alt="" style="width: 255px;height: 255px;">
 									</a>
 									<!--=======  hover icons  =======-->
 									<a class="hover-icon preview" data-id="{{item.id}}" href="#"><i class="lnr lnr-eye"></i></a>
