--- a/resources/views/index/product-list-category.twig
+++ b/resources/views/index/product-list-category.twig
@@ -239,6 +239,7 @@
                 style: "error"
             });
         });
+        return false;
     });
 
     $(".add_to_cart").on("click", function()
@@ -272,6 +273,7 @@
                 });
             }
         });
+        return false;
     });
 
     //preview
