--- a/resources/views/index/index.twig
+++ b/resources/views/index/index.twig
@@ -457,7 +457,7 @@
 							<div class="single-slider-blog-post">
 								<div class="image">
 									<a href="/index/blog/{{article.id}}">
-										<img src="{{plugin_path("Plentymarket")}}/images/slider/blog/01.jpg" class="img-fluid" alt="">
+										<img src="{{article.data.images.0}}" class="img-fluid" alt="">
 									</a>
 								</div>
 								<div class="content">
