--- a/resources/views/index/index.twig
+++ b/resources/views/index/index.twig
@@ -266,7 +266,7 @@
 											<!--=======  End of hover icons  =======-->
 											<!--=======  badge  =======-->
 											<div class="product-badge">
-												<span class="discount-badge">-{{item.discount}}}%</span>
+{#												<span class="discount-badge">-{{item.discount}}%</span>#}
 											</div>
 											<!--=======  End of badge  =======-->
 										</div>
