--- a/resources/views/index/index.twig
+++ b/resources/views/index/index.twig
@@ -165,7 +165,7 @@
 			<div class="col-lg-12">
 				<!--=======  top selling product slider container  =======-->
 				<div class="ptk-slider double-row-slider-container" data-row="2">
-					{%for item in home_product_new.list%}
+					{%for item in product_new.list%}
 						<div class="col">
 							<!--=======  single product  =======-->
 							<div class="ptk-product">
