--- a/resources/views/index/index.twig
+++ b/resources/views/index/index.twig
@@ -171,7 +171,7 @@
 							<div class="ptk-product">
 								<div class="image">
 									<a href="/index/product/{{item.id}}">
-										<img src="{{item.images.0}}" class="img-fluid" alt="">
+										<img src="{{item.images.0}}" class="img-fluid" alt="" style="width: 198px;height: 198px;">
 									</a>
 									<!--=======  hover icons  =======-->
 									<a class="hover-icon preview" data-id="{{item.id}}" href="#"><i class="lnr lnr-eye"></i></a>
@@ -296,8 +296,8 @@
 			</div>
 			<div class="col-lg-6">
 				<div class="section-title mb-40">
-					<h2>Some <span>Popular</span> Products</h2>
-					<p>We offer the best selection furniture at prices you will love!</p>
+					<h2>{{trans('Plentymarket::WebIndexIndex.popular_products')|raw}}</h2>
+					<p>{{trans('Plentymarket::WebIndexIndex.popular_products_desc')|raw}}</p>
 				</div>
 				<div class="row">
 					<div class="col-lg-12">
@@ -517,7 +517,7 @@
 							<h2 class="product-price mb-15">
 								<span class="main-price discounted"></span>
 								<span class="discounted-price"></span>
-								<span class="discount-percentage">-{{item.discount}}%</span>
+								{#								<span class="discount-percentage">-{{item.discount}}%</span>#}
 							</h2>
 							<p class="product-description mb-20"></p>
 							<div class="cart-buttons mb-20">
