--- a/resources/views/common/header.twig
+++ b/resources/views/common/header.twig
@@ -128,7 +128,14 @@
 										<a href="#" data-id="en">
 											<img src="{{plugin_path("Plentymarket")}}/images/flags/1.jpg" alt="">
 											English
-										</a></li>
+										</a>
+									</li>
+									<li>
+										<a href="#" data-id="de">
+											<img src="{{plugin_path("Plentymarket")}}/images/flags/2.png" alt="">
+											Germany
+										</a>
+									</li>
 									<li>
 										<a href="#" data-id="it">
 											<img src="{{plugin_path("Plentymarket")}}/images/flags/3.png" alt="">
