--- a/resources/views/index/product.twig
+++ b/resources/views/index/product.twig
@@ -302,7 +302,7 @@
 <!--=============================================
 =            related product slider         =
 =============================================-->
-
+{%if crossSelling|length > 0%}
 <div class="related-product-area mb-80">
     <div class="container">
         <div class="row">
@@ -363,7 +363,7 @@
         </div>
     </div>
 </div>
-
+{%endif%}
 <!--=====  End of related product slider  ======-->
 
 <!--=============================================
