--- a/resources/views/index/product.twig
+++ b/resources/views/index/product.twig
@@ -302,7 +302,7 @@
 <!--=============================================
 =            related product slider         =
 =============================================-->
-{%if crossSelling|length > 0%}
+{%if crossSelling.total > 0%}
 <div class="related-product-area mb-80">
     <div class="container">
         <div class="row">
@@ -317,7 +317,7 @@
                 <!--=======  top selling product slider container  =======-->
 
                 <div class="ptk-slider related-product-slider-container">
-                    {%for product in crossSelling%}
+                    {%for product in crossSelling.list%}
                         <div class="col">
                             <!--=======  single product  =======-->
                             <div class="ptk-product">
