--- a/resources/views/index/product.twig
+++ b/resources/views/index/product.twig
@@ -99,14 +99,20 @@
                     </div>
                     <div class="policy-list">
                         <ul>
-                            <li><img src="{{plugin_path("Plentymarket")}}/images/icons/shield.png" alt=""> Security
-                                policy
+                            <li><img src="{{plugin_path("Plentymarket")}}/images/icons/shield.png" alt="">
+                                <a href="/index/blog/8dbd7e36-c17d-59a1-b4a7-3a10c6083b7c">
+                                    Security policy
+                                </a>
                             </li>
-                            <li><img src="{{plugin_path("Plentymarket")}}/images/icons/truck.png" alt=""> Delivery
-                                policy
+                            <li><img src="{{plugin_path("Plentymarket")}}/images/icons/truck.png" alt="">
+                                <a href="/index/blog/ba8087ad-c7ad-59ba-969a-aa95161c208b">
+                                    Delivery policy
+                                </a>
                             </li>
-                            <li><img src="{{plugin_path("Plentymarket")}}/images/icons/compare.png" alt=""> Return
-                                policy
+                            <li><img src="{{plugin_path("Plentymarket")}}/images/icons/compare.png" alt="">
+                                <a href="/index/blog/0550fe9e-9da8-5820-81d8-c147d0d2ef14">
+                                    Return policy
+                                </a>
                             </li>
                         </ul>
                     </div>
