--- a/resources/views/index/contact.twig
+++ b/resources/views/index/contact.twig
@@ -28,7 +28,7 @@
 
 					<div class="single-contact-block">
 						<h4><img src="assets/images/icons/contact-icon1.png" alt=""> Address</h4>
-						<p>123 Main Street, Anytown, CA 12345 – USA</p>
+						<p>{{services.config.getTemplateConfig('basic.address')}}</p>
 					</div>
 
 					<!--=======  End of single contact block  =======-->
@@ -37,8 +37,7 @@
 
 					<div class="single-contact-block">
 						<h4><img src="assets/images/icons/contact-icon2.png" alt=""> Phone</h4>
-						<p>Mobile: (08) 123 456 789</p>
-						<p>Hotline: 1009 678 456</p>
+						<p>{{services.config.getTemplateConfig('basic.phone')}}</p>
 					</div>
 
 					<!--=======  End of single contact block  =======-->
@@ -47,8 +46,7 @@
 
 					<div class="single-contact-block">
 						<h4><img src="assets/images/icons/contact-icon3.png" alt=""> Email</h4>
-						<p>yourmail@domain.com</p>
-						<p>support@hastech.company</p>
+						<p>{{services.config.getTemplateConfig('basic.email')}}</p>
 					</div>
 
 					<!--=======  End of single contact block  =======-->
