--- a/resources/views/index/product.twig
+++ b/resources/views/index/product.twig
@@ -148,10 +148,10 @@
                     </nav>
                     <div class="tab-content" id="nav-tabContent">
                         <div class="tab-pane fade show active" id="description" role="tabpanel" aria-labelledby="description-tab">
-                            <p class="product-desc">{{item.desc}}</p>
+                            <p class="product-desc">{{item.desc|raw}}</p>
                         </div>
                         <div class="tab-pane fade" id="features" role="tabpanel" aria-labelledby="features-tab">
-                            <p class="product-desc">{{item.technicalData}}</p>
+                            <p class="product-desc">{{item.technicalData|raw}}</p>
                         </div>
                         {#                        <div class="tab-pane fade" id="review" role="tabpanel" aria-labelledby="review-tab">#}
                         {#                            <div class="product-ratting-wrap">#}
